# kinematics-sim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
